[package]
name = "AstroChatWebhook"
version = "0.1.0"
authors = ["rdavis <ricky.c.davis.9@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.6"
serde_json = "1.0"
rand = "0.8.2"
rand_seeder = "0.2.2"
rand_pcg = "0.3.0"
reqwest =  { version = "0.11.0", features = ["blocking", "json"] }